<resources>
    <string name="app_name">RITM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="greeting">Log in or register</string>
    <string name="start">Let\'s go!</string>
    <string name="check">check</string>
    <string name="grammar">Grammar practise</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Log in</string>
    <string name="register">Not registered yet? Click here!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="registerHint">Don\'t have an account? Click here and register!</string>
    <string name="registrationDescription">Please, fill the information below</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="accountCreation">Create an account</string>
    <string name="logout">Log out</string>
    <string name="main_page">Main page</string>
    <string name="finish">Finish</string>
    <string name="topic1">Давайте познакомимся!</string>
    <string name="l1_grammar_1_title_1" />
    <string name="L1grammar1_title">Gender</string>
    <string name="NB">NB!</string>
    <string name="l1_g1_description1">All nouns in Russian have gender: they are either masculine, feminine or neuter:</string>
    <string name="l1_g1_description2">•\tSome animate nouns (including familiar forms of first names) that end in - а or - я are masculine.</string>
    <string name="l1_g1_description3" translatable="false">Он папа/дедушка/Коля</string>
    <string name="l1_g1_description4" translatable="false">but \t Она мама/бабушка/Маша</string>
    <string name="l1_g1_description5">•\tGender is not reflected, however, in the plural: они (they) is used for all genders. – ы and – и are two common endings for plural:</string>
    <string name="l1_g1_description6" translatable="false">Джинсы -ы \t Очки - и</string>
    <string name="l1_g1_description7">•\tBe aware of such neuter nouns which have –я ending: время, имя, пламя, племя etc.</string>
    <string name="l1_grammar_1_title_2">Write он before the masculine nouns, она before the feminine nouns, оно before the neuter nouns, and они before the plural nouns.</string>
    <string name="l1_g1_question0" translatable="false">весы</string>
    <string name="l1_g1_question1" translatable="false">волк </string>
    <string name="l1_g1_question2" translatable="false">мост</string>
    <string name="l1_g1_question3" translatable="false">стихотворение</string>
    <string name="l1_g1_question4" translatable="false">носки</string>
    <string name="l1_g1_question5" translatable="false">фамилия</string>
    <string name="l1_g1_question6" translatable="false">государство </string>
    <string name="l1_g1_question7" translatable="false">медаль</string>
    <string name="l1_g1_question8" translatable="false">джинсы </string>
    <string name="l1_g1_question9" translatable="false">чувство</string>
    <string name="l1_g1_question10" translatable="false">музей</string>
    <string name="l1_g1_question11" translatable="false">время </string>
    <string name="l1_g1_question12" translatable="false">история </string>
    <string name="l1_g1_question13" translatable="false">дружба </string>
    <string name="l1_g1_question14" translatable="false">архитектура</string>
    <string name="l1_g1_question15" translatable="false">слово</string>
    <string name="l1_g1_question16" translatable="false">поколение </string>
    <string name="l1_g1_question17" translatable="false">словарь </string>
    <string name="l1_g1_question18" translatable="false">брюки </string>
    <string name="l1_g1_question19" translatable="false">проблема </string>
    <string name="l1_g1_question20" translatable="false">очки </string>
    <string name="l1_g1_question21" translatable="false">деньги </string>
    <string name="l1_g1_question22" translatable="false">такси </string>
    <string name="l1_g1_question23" translatable="false">парк</string>
    <string name="l1_g1_question24" translatable="false">здание </string>
    <string name="l1_g1_question25" translatable="false">стол </string>
    <string name="l1_g1_question26" translatable="false">месяц </string>
    <string name="l1_g1_question27" translatable="false">язык </string>
    <string name="l1_g1_question28" translatable="false">страна </string>
    <string name="l1_g1_question29" translatable="false">часы </string>
    <string name="l1_g1_question30" translatable="false">школа </string>
    <string name="l1_g1_question31" translatable="false">ножницы </string>
    <string name="l1_g1_question32" translatable="false">ученик</string>
    <string name="L1grammar2_title">Plural of nouns</string>
    <string name="l1_g2_description1">*The choice between the endings –ы and –и is determined by  the Rule 1 below.</string>
    <string name="l1_g2_description3">NB! There are some irregular plural forms which can be described according to these rules:</string>
    <string name="l1_grammar_2_title_2">Write the singular words in the plural and vice versa.</string>
    <string name="l1_g2_question0" translatable="false"> слово -</string>
    <string name="l1_g2_question1" translatable="false"> язык -</string>
    <string name="l1_g2_question2" translatable="false">- вопросы </string>
    <string name="l1_g2_question3" translatable="false"> город -</string>
    <string name="l1_g2_question4" translatable="false"> друг -</string>
    <string name="l1_g2_question5" translatable="false">- растения </string>
    <string name="l1_g2_question6" translatable="false">- люди </string>
    <string name="l1_g2_question7" translatable="false"> здание -</string>
    <string name="l1_g2_question8" translatable="false">- истории </string>
    <string name="l1_g2_question9" translatable="false"> гора -</string>
    <string name="l1_g2_question10" translatable="false">- имена </string>
    <string name="l1_g2_question11" translatable="false"> проблема -</string>
    <string name="l1_g2_question12" translatable="false">- школы </string>
    <string name="l1_g2_question13" translatable="false"> время -</string>
    <string name="l1_g2_question14" translatable="false">- чувства </string>
    <string name="L1grammar3_title">Adjective Agreement: Introduction</string>
    <string name="l1_g3_description1">Adjectives agree with the noun in gender.</string>
    <string name="l1_g3_description2">Think of -ый, -ая, -ое, and -ые as the basic adjective endings that have some slight variations. For example, when the masculine ending is stressed, it is spelled –ой, as in Большой театр.</string>
    <string name="l1_g3_description3" translatable="false">он плох-о́й \t она плох-а́я</string>
    <string name="l1_g3_description4" translatable="false">but: он хоро́ш-ий \t она хоро́ш-ая</string>
    <string name="l1_grammar_2_title_3">Fill in the adjectives with the correct endings according to the gender.</string>
    <string name="l1_g3_first_0" translatable="false">﻿Больш</string>
    <string name="l1_g3_second_0" translatable="false"> страна</string>
    <string name="l1_g3_first_1" translatable="false">Интересн</string>
    <string name="l1_g3_second_1" translatable="false"> музей </string>
    <string name="l1_g3_first_2" translatable="false">Длинн</string>
    <string name="l1_g3_second_2" translatable="false"> история </string>
    <string name="l1_g3_first_3" translatable="false">Русск</string>
    <string name="l1_g3_second_3" translatable="false"> словарь </string>
    <string name="l1_g3_first_4" translatable="false">Нов</string>
    <string name="l1_g3_second_4" translatable="false"> ученик</string>
    <string name="l1_g3_first_5" translatable="false">Маленьк</string>
    <string name="l1_g3_second_5" translatable="false"> ножницы</string>
    <string name="l1_g3_first_6" translatable="false">Больш</string>
    <string name="l1_g3_second_6" translatable="false"> стол</string>
    <string name="l1_g3_first_7" translatable="false">Красив</string>
    <string name="l1_g3_second_7" translatable="false"> парк </string>
    <string name="l1_g3_first_8" translatable="false">Нов</string>
    <string name="l1_g3_second_8" translatable="false"> часы</string>
    <string name="l1_g3_first_9" translatable="false">Стар</string>
    <string name="l1_g3_second_9" translatable="false"> архитектура</string>
    <string name="l1_g3_first_10" translatable="false">Хорош</string>
    <string name="l1_g3_second_10" translatable="false"> школа</string>
    <string name="l1_g3_first_11" translatable="false">Нов</string>
    <string name="l1_g3_second_11" translatable="false"> месяц </string>
    <string name="l1_g3_first_12" translatable="false">Больш</string>
    <string name="l1_g3_second_12" translatable="false"> здание</string>
    <string name="l1_g3_first_13" translatable="false">Маленьк</string>
    <string name="l1_g3_second_13" translatable="false"> мост</string>
    <string name="l1_g3_first_14" translatable="false">Хорош</string>
    <string name="l1_g3_second_14" translatable="false"> стол</string>
    <string name="l1_g3_first_15" translatable="false">Нов</string>
    <string name="l1_g3_second_15" translatable="false"> медаль </string>
    <string name="l1_g3_first_16" translatable="false">Больш</string>
    <string name="l1_g3_second_16" translatable="false"> брюки</string>
    <string name="l1_g3_first_17" translatable="false">Маленьк</string>
    <string name="l1_g3_second_17" translatable="false"> проблема </string>
    <string name="score_for_a_game">Score for a game:</string>
    <string name="correct_answers">Number of correct answers:</string>
    <string name="see_errors">Look at your mistakes</string>
    <string name="correct_answers_1">Mistakes</string>
    <string name="see_errors_1">mistakes</string>
    <string name="ok">Ok</string>
    <string name="topic2">Моя семья</string>
    <string name="L3grammar1_title">Pointing And Distinguishing Things</string>
    <string name="l3_g1_description1">Э́то in Russian is a demonstrative pronoun = this is/ that is/ these are/ those are. We use it in sentence of naming and introduction. For example:</string>
    <string name="l3_g1_description2">Что это?</string>
    <string name="l3_g1_description3">Это книга.</string>
    <string name="l3_g1_description4">Кто это?</string>
    <string name="l3_g1_description5">Это Наташа.</string>
    <string name="l3_g1_description6">NB! Use Что with the inanimate objects and Кто with animate ones (people, animals).</string>
    <string name="l3_g1_description7">In sense mentioned above это would never changes form. But if you want to distinguish one thing from other similar things (‘this book’ or ‘these dogs’) you need to use adjective pronoun which reflects the gender, number and case of the noun with which it is used.</string>
    <string name="l3_g1_description8">Это моя собака. but  Эта собака моя.</string>
    <string name="l3_g1_description9">Это наш телевизор.  but  Этот телевизор наш.</string>
    <string name="l3_g1_description10">Это твои газеты. but Эти газеты твои.</string>
</resources>